# Noise_CrawlAgent

./: .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
agent_service/: Dockerfile  config.py  main.py
agent_service/agents/: factory.py  llm.py  mcp_client.py
agent_service/graph/: builder.py  conditions.py  nodes.py  state.py
agent_service/prompts/: download_prompt.py  extract_prompt.py  filter_prompt.py
agent_service/tools/: file_downloader.py  gdee_eia.py  result_parser.py  web_scraper.py
backend/: crud.py  database.py  init_database.py
backend/models/: __init__.py  news_urls.py  project_results.py
crawl_service/: Dockerfile  config.py  log_service.py  main.py  scheduler.py
crawl_service/spiders/: gd_transport.py  gdee_eia.py
noise_barrier_intel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
